--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* All <li> elements. */
 h2 {
     color: rgb(0, 0, 0);
 }
@@ -8,11 +7,53 @@ h2 {
     background-color: royalblue;
 }
 
-h1 {
-    border: rgb(0, 0, 0);
+.special {
+    border: rgb(0, 195, 255);
     background-color:royalblue;
+    margin: 0.5cm;
+    padding: 10px;
+    color: white;
+    font-weight: bold;
 }
 
+.special2 {
+    border: rgb(0, 195, 255);
+    background-color:royalblue;
+    color: white;
+    font-weight: bold;
+}
+
+
 li.spacious {
-        margin: 2em;
+    margin: 0em;
+}
+
+.inicioespecial {
+    background-color: royalblue;
+    color: seashell;
+}
+
+  
+li {
+    background-color: royalblue;
+    padding: 16px;
+}
+
+img + h2 {
+    font-weight: bold;
+}
+
+html {
+    width: 60em;
+    margin: 0 auto;
+}
+
+.link {
+    color: rgb(255, 255, 255);
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.link2 {
+    color: white;
 }
